<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/filterToggleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/filterToggle"
        android:text="@string/filter_by"
        android:gravity="center"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/filterToggle"
        />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/filterToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:entries="@array/filter_types"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/restaurant_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filterToggle"
        app:layout_constraintBottom_toTopOf="@id/page_number"/>

    <Button
        android:id="@+id/back_to_start"
        style="@style/paging_button"
        android:text="@string/back_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <Button
        android:id="@+id/back_page"
        style="@style/paging_button"
        android:text="@string/back"
        app:layout_constraintStart_toEndOf="@id/back_to_start"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:id="@+id/page_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="42dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/forward_page"
        app:layout_constraintStart_toEndOf="@id/back_page"
        tools:text="1/2020" />
    <Button
        android:id="@+id/forward_page"
        style="@style/paging_button"
        android:text="@string/forward"
        app:layout_constraintEnd_toStartOf="@id/forward_to_end"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <Button
        android:id="@+id/forward_to_end"
        style="@style/paging_button"
        android:text="@string/forward_forward"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>